<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="accelerator">Neural Accelerator</string>
    <string name="accelerator_settings_column_count_default_value">1</string>
    <string name="accelerator_settings_column_count_key">accelerator_column_count</string>
    <string name="accelerator_settings_column_count_summary">Column count</string>
    <string name="accelerator_settings_column_count_title">Column count</string>
    <string name="accelerator_settings_duration_default_value">60000</string>
    <string name="accelerator_settings_duration_key">accelerator_duration</string>
    <string name="accelerator_settings_duration_summary">Duration of the training</string>
    <string name="accelerator_settings_duration_title">Duration</string>
    <string name="bottom_menu_home">Home</string>
    <string name="bottom_menu_materials">Material</string>
    <string name="bottom_menu_profile">Profile</string>
    <string name="bottom_menu_reading">Reading</string>
    <string name="bottom_menu_training">Training</string>
    <string name="cup_timer_settings_duration_default_value">300000</string>
    <string name="cup_timer_settings_duration_key">cup_timer_duration</string>
    <string name="cup_timer_settings_type_default_value">1</string>
    <string name="cup_timer_settings_type_key">cup_timer_type</string>
    <string name="cup_timer_settings_type_summary">Type of training</string>
    <string name="cup_timer_settings_type_title">Type</string>
    <string name="dialog_continue">Continue</string>
    <string name="dialog_exit">Exit</string>
    <string name="dialog_help">Help</string>
    <string name="dialog_restart">Restart</string>
    <string name="dialog_settings">Settings</string>
    <string name="green_dot_settings_duration_summary">Duration of the training</string>
    <string name="green_dot_settings_duration_title">Duration</string>
    <string name="help">Help</string>
    <string name="line_of_sight_settings_board_size_summary">Board size</string>
    <string name="line_of_sight_settings_board_size_title">Board size</string>
    <string name="line_of_sight_settings_field_type_preference_default_value">0</string>
    <string name="line_of_sight_settings_field_type_preference_key">line_of_sight_field_type</string>
    <string name="line_of_sight_settings_field_type_summary">Field type</string>
    <string name="line_of_sight_settings_field_type_title">Field type</string>
    <string name="line_of_sight_settings_row_count_preference_default_value">5</string>
    <string name="line_of_sight_settings_row_count_preference_key">line_of_sight_row_count</string>
    <string name="notifications">Notifications</string>
    <string name="notifications_settings_notify_key">notifications_notify</string>
    <string name="notifications_settings_notify_time_key">notifications_notify_time</string>
    <string name="notifications_settings_set_time_title">Set time</string>
    <string name="notifications_settings_title">Daily notifications</string>
    <string name="pass_course_next">Next</string>
    <string name="rate_app_dialog_dont_show_again">No, thanks</string>
    <string name="rate_app_dialog_message">"Hi! If you like our application and you are interested in it's development, spend a minute of your time to leave your feedback."</string>
    <string name="rate_app_dialog_rate_now">Rate it now</string>
    <string name="rate_app_dialog_remind_me_later">Remind me later</string>
    <string name="rate_app_dialog_title">Rate application</string>
    <string name="reader_guide_dialog_center_description">"Click on the central third of the screen to pause or to resume training 

Click twice on the central third of the screen to call a navigation menu"</string>
    <string name="reader_guide_dialog_flash_reading_message">"This mode allows to read books using the automatic page turning without highlighting the single words. 

You need to try to read with defocused sight. Make it a routine to reach the maximum amount of text. 

It is not necessary to fully understand the read text in the early stages."</string>
    <string name="reader_guide_dialog_flash_reading_title">Sighting mode</string>
    <string name="reader_guide_dialog_speed_down_description">Click on the left third of the screen to reduce speed</string>
    <string name="reader_guide_dialog_speed_up_description">Click on the right third of the screen to increase speed</string>
    <string name="schulte_description_image_1_title">Beginner</string>
    <string name="schulte_description_image_2_title">Finding the numbers in 15–20 seconds.</string>
    <string name="schulte_description_image_3_title">Finding the numbers in 8–10 seconds.</string>
    <string name="schulte_description_part_1_message">"Tables with randomly distributed numbers or letters used to check and develop the speed of finding objects in a certain order. 

Exercises with tables allow improving peripheral visual perception, which is important, among other things, for speed reading. 

When you need to invent something, create, write, work with tables, and the process will go to a higher level of concentration, a higher creative level. 

Categories with tables will be useful for almost all types of human activities and at any age."</string>
    <string name="schulte_description_part_1_title">The Schulte table</string>
    <string name="schulte_description_part_2_message">"It is necessary to choose a comfortable place, relax and concentrate on the task. 

The distance from the table to your eyes should be approximately 30–35 cm, the same as when reading a book. 

Before you start, fix your eyes at the grid center and do not move them. All the work is performed with your peripheral vision. 

Find the numbers you need in ascending order from 1 to 25, without omissions and at maximum speed, better without pronouncing the numbers to yourself or aloud. 

It is very important to avoid eye movements away from the center and only look for numbers by peripheral vision. 

The time and frequency of training should be chosen so as to avoid fatigue. 

It is advisable to do this twice a day for 10 minutes. 

As your skill develops, go to 6x6 or 7x7 grid tables."</string>
    <string name="schulte_description_part_2_title">Training mode</string>
    <string name="schulte_description_part_3_message">"Do not try to achieve the maximum result here and now. Everything should go on gradually. Train for three weeks till you reach a certain stable result, then take a break. Go on in a couple of days. 

Gradually, you will see the effect yourself. You will see how your abilities to perceive information, thinking and memory improved. And don’t forget that it’s just a basic exercise for your brain to keep it in good working condition. 

It is impossible to learn speed reading techniques in 3 days. Therefore, adjust yourself to long-term work and receive from reading not only the benefits, but also the pleasure."</string>
    <string name="schulte_description_part_3_title">Conclusion</string>
    <string name="schulte_table_settings_column_count_preference_default_value">5</string>
    <string name="schulte_table_settings_column_count_preference_key">schulte_table_column_count</string>
    <string name="schulte_table_settings_column_count_summary">Column count</string>
    <string name="schulte_table_settings_column_count_title">Column count</string>
    <string name="schulte_table_settings_fullscreen_preference_key">schulte_table_fullscreen</string>
    <string name="schulte_table_settings_fullscreen_summary">Schulte table fullscreen mode</string>
    <string name="schulte_table_settings_fullscreen_title">Fullscreen</string>
    <string name="schulte_table_settings_row_count_preference_default_value">5</string>
    <string name="schulte_table_settings_row_count_preference_key">schulte_table_row_count</string>
    <string name="schulte_table_settings_row_count_summary">Row count</string>
    <string name="schulte_table_settings_row_count_title">Row count</string>
    <string name="settings">Settings</string>
    <string name="share">Share</string>
    <string name="speed_reading_result_average_speed">Average speed</string>
    <string name="speed_reading_result_best_average_speed">Best</string>
    <string name="speed_reading_result_best_max_speed">Best</string>
    <string name="speed_reading_result_max_speed">Max speed</string>
</resources>