<?xml version="1.0" encoding="utf-8"?>
<LinearLayout n1:orientation="vertical" n1:paddingLeft="@dimen/activity_horizontal_margin" n1:paddingRight="@dimen/activity_horizontal_margin" n1:paddingBottom="@dimen/activity_vertical_margin" n1:layout_width="fill_parent" n1:layout_height="wrap_content"
  xmlns:n1="http://schemas.android.com/apk/res/android">
    <TextView n1:textSize="26.0sp" n1:textColor="@color/colorWhiteText" n1:gravity="center" n1:paddingTop="8.0dip" n1:layout_width="fill_parent" n1:layout_height="wrap_content" n1:text="@string/schulte_description_part_1_title" />
    <TextView n1:textSize="16.0sp" n1:textColor="@color/colorWhiteText" n1:layout_width="fill_parent" n1:layout_height="wrap_content" n1:text="@string/schulte_description_part_1_message" />
    <TextView n1:textSize="26.0sp" n1:textColor="@color/colorWhiteText" n1:gravity="center" n1:paddingTop="8.0dip" n1:paddingBottom="4.0dip" n1:layout_width="fill_parent" n1:layout_height="wrap_content" n1:text="@string/schulte_description_part_2_title" />
    <TextView n1:textSize="16.0sp" n1:textColor="@color/colorWhiteText" n1:layout_width="fill_parent" n1:layout_height="wrap_content" n1:text="@string/schulte_description_part_2_message" />
    <ImageView n1:layout_gravity="center" n1:paddingTop="8.0dip" n1:paddingBottom="8.0dip" n1:layout_width="175.0dip" n1:layout_height="175.0dip" n1:src="@drawable/schulte_description_image_1" />
    <TextView n1:textSize="14.0sp" n1:textColor="@color/colorWhiteText" n1:gravity="center" n1:paddingTop="4.0dip" n1:layout_width="fill_parent" n1:layout_height="wrap_content" n1:text="@string/schulte_description_image_1_title" />
    <ImageView n1:layout_gravity="center" n1:paddingTop="8.0dip" n1:paddingBottom="8.0dip" n1:layout_width="175.0dip" n1:layout_height="175.0dip" n1:src="@drawable/schulte_description_image_2" />
    <TextView n1:textSize="14.0sp" n1:textColor="@color/colorWhiteText" n1:gravity="center" n1:paddingTop="4.0dip" n1:layout_width="fill_parent" n1:layout_height="wrap_content" n1:text="@string/schulte_description_image_2_title" />
    <ImageView n1:layout_gravity="center" n1:paddingTop="8.0dip" n1:paddingBottom="8.0dip" n1:layout_width="175.0dip" n1:layout_height="175.0dip" n1:src="@drawable/schulte_description_image_3" />
    <TextView n1:textSize="14.0sp" n1:textColor="@color/colorWhiteText" n1:gravity="center" n1:paddingTop="4.0dip" n1:paddingBottom="4.0dip" n1:layout_width="fill_parent" n1:layout_height="wrap_content" n1:text="@string/schulte_description_image_3_title" />
    <TextView n1:textSize="26.0sp" n1:textColor="@color/colorWhiteText" n1:gravity="center" n1:paddingTop="8.0dip" n1:paddingBottom="4.0dip" n1:visibility="gone" n1:layout_width="fill_parent" n1:layout_height="wrap_content" n1:text="@string/schulte_description_part_3_title" />
    <TextView n1:textSize="16.0sp" n1:textColor="@color/colorWhiteText" n1:layout_width="fill_parent" n1:layout_height="wrap_content" n1:text="@string/schulte_description_part_3_message" />
</LinearLayout>