<?xml version="1.0" encoding="utf-8"?>
<LinearLayout n1:orientation="vertical" n1:layout_width="fill_parent" n1:layout_height="wrap_content"
  xmlns:n1="http://schemas.android.com/apk/res/android">
    <LinearLayout n1:orientation="vertical" n1:padding="24.0dip" n1:layout_width="wrap_content" n1:layout_height="wrap_content">
        <TextView n1:paddingBottom="20.0dip" n1:layout_width="fill_parent" n1:layout_height="wrap_content" n1:text="@string/rate_app_dialog_title" style="@style/TextAppearance.AppCompat.Title" />
        <TextView n1:layout_width="fill_parent" n1:layout_height="wrap_content" n1:text="@string/rate_app_dialog_message" style="@style/TextAppearance.AppCompat.Subhead" />
    </LinearLayout>
    <LinearLayout n1:gravity="end" n1:layout_gravity="end" n1:orientation="vertical" n1:layout_width="wrap_content" n1:layout_height="wrap_content" n1:layout_marginTop="24.0dip" n1:layout_marginRight="8.0dip" n1:layout_marginBottom="8.0dip">
        <Button n1:textColor="@color/colorAccent" n1:id="@id/rate_app_dialog_rate_now" n1:layout_width="wrap_content" n1:layout_height="wrap_content" n1:text="@string/rate_app_dialog_rate_now" style="@style/Widget.AppCompat.Button.Borderless" />
        <Button n1:textColor="@color/colorAccent" n1:id="@id/rate_app_dialog_dont_show_again" n1:layout_width="wrap_content" n1:layout_height="wrap_content" n1:text="@string/rate_app_dialog_dont_show_again" style="@style/Widget.AppCompat.Button.Borderless" />
        <Button n1:textColor="@color/colorAccent" n1:id="@id/rate_app_dialog_remind_me_later" n1:layout_width="wrap_content" n1:layout_height="wrap_content" n1:text="@string/rate_app_dialog_remind_me_later" style="@style/Widget.AppCompat.Button.Borderless" />
    </LinearLayout>
</LinearLayout>