<?xml version="1.0" encoding="utf-8"?>
<menu>
    <item n1:icon="@drawable/action_bar_share_icon" n1:id="@id/share" n1:orderInCategory="100" n1:title="@string/share" n2:showAsAction="ifRoom"
      xmlns:n1="http://schemas.android.com/apk/res/android" xmlns:n2="http://schemas.android.com/apk/res-auto" />
    <item n3:icon="@drawable/action_bar_help_icon" n3:id="@id/help" n3:orderInCategory="200" n3:title="@string/help" n4:showAsAction="ifRoom"
      xmlns:n3="http://schemas.android.com/apk/res/android" xmlns:n4="http://schemas.android.com/apk/res-auto" />
    <item n5:icon="@drawable/action_bar_settings_icon" n5:id="@id/settings" n5:orderInCategory="300" n5:title="@string/settings" n6:showAsAction="ifRoom"
      xmlns:n5="http://schemas.android.com/apk/res/android" xmlns:n6="http://schemas.android.com/apk/res-auto" />
</menu>